--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <label for="default-range">Scanning precision at 1 meter (cm)</label><br>
     <input id="default-range" type="text" value="1"></input><br>
     <button onclick="activateXR()">Start Hello WebXR</button>
+    <div id="overlay">
+
+    </div>
     <script>
         var stats = new Stats();
         var vertexPanel = stats.addPanel(new Stats.Panel('vU', '#ff8', '#221'));
@@ -64,7 +67,7 @@
             const canvas = document.createElement("canvas");
             document.body.appendChild(canvas);
             // Adding stats after canvas
-            document.body.appendChild(stats.dom);
+            document.getElementById("overlay").appendChild(stats.dom);
             const gl = canvas.getContext("webgl2", { xrCompatible: true });
 
             const mininumDistance = parseFloat(document.getElementById("min-dist").value) / 100;
@@ -90,12 +93,17 @@
             // The API directly updates the camera matrices.
             // Disable matrix auto updates so three.js doesn't attempt
             // to handle the matrices independently.
+            const globalViewCamera = new THREE.OrthographicCamera( -500, 500, 1000, -1000, 0.01, 30);
+
             const camera = new THREE.PerspectiveCamera();
             camera.matrixAutoUpdate = false;
 
             // Initialize a WebXR session using "immersive-ar".
             const session = await navigator.xr.requestSession("immersive-ar", {
-                requiredFeatures: ["hit-test", "camera-access", "anchors"],
+                requiredFeatures: ["hit-test", "camera-access", "anchors", "dom-overlay"],
+                domOverlay: {
+                    root: document.getElementById("overlay")
+                }
             });
             const glBinding = new XRWebGLBinding(session, gl);
 
@@ -206,11 +214,15 @@
             const genMaterial = new THREE.MeshBasicMaterial({
                 side: THREE.DoubleSide,
                 map: xrTexture,
+                wireframe: false,
             });
 
             const genMesh = new THREE.Mesh(genGeometry, genMaterial);
             genMesh.frustumCulled = false;
             scene.add(genMesh);
+
+            globalViewCamera.position.set(0.5, 0, 0.5);
+            globalViewCamera.lookAt(genMesh.position);
             /* Gen Mesh done */
 
             const polygonize = (view, backgroundLayer, frame, camera_pixels) => {
@@ -270,9 +282,9 @@
                         const pose = hitTestResults[0].getPose(referenceSpace);
                         //frame.getPose(anchors[i].anchorSpace, referenceSpace);
                         posVec.set(pose.transform.position.x, pose.transform.position.y, pose.transform.position.z);
-                        
+
                         //var distanceSquared = projectVec.fromBufferAttribute(basePositions, anchorIndex[i]).distanceToSquared(posVec);
-                        
+
                         basePositions.setXYZ(anchorIndex[i], posVec.x, posVec.y, posVec.z);
                         for (var j = 0; j < maxFaces; j++) {
                             if (faceVertexUsage[j] == anchorIndex[i]) {
@@ -312,8 +324,9 @@
                                     faceCount++;
                                 }
                                 if (edgeArr.length > 1 || genVertexCount < 3) {
-                                    const newOffsetXRRay = new XRRay({ x: camPosition.x, y: camPosition.y, z: camPosition.z, w: 1.0 }, { x: camPosition.x - posVec.x, y: camPosition.y - posVec.y, z: camPosition.z - posVec.z, w: 0.0 });
+                                    const newOffsetXRRay = new XRRay({ x: camPosition.x, y: camPosition.y, z: camPosition.z, w: 1.0 }, { x: posVec.x - camPosition.x, y: posVec.y - camPosition.y, z: posVec.z - camPosition.z, w: 0.0 });
                                     session.requestHitTestSource({ space: referenceSpace, offsetRay: newOffsetXRRay }).then(function (newHitTest) {
+                                        console.log("On HitTest request complete!", anchors.length);
                                         anchors.push(newHitTest);
                                         anchorIndex.push(genVertexCount);
                                     });
@@ -499,7 +512,7 @@
                     const view = pose.views[0];
 
                     if (canUpdateCameraPos) {
-                        canUpdateCameraPos = false;
+                        canUpdateCameraPos = true;
                         camera.matrix.fromArray(view.transform.matrix)
                         camera.projectionMatrix.fromArray(view.projectionMatrix);
                         camera.updateMatrixWorld(true);
@@ -549,11 +562,15 @@
                         renderer.setSize(view.camera.width, view.camera.height);
                     }
                     */
+
+                    //genMesh.rotation.y += 0.02;
+
                     gl.bindTexture(gl.TEXTURE_2D, null);
                     renderer.setRenderTarget(null);
                     renderer.setClearColor(new THREE.Color(0x000000), 1.0);
                     renderer.clear();
                     renderer.render(scene, camera);
+                    //renderer.render(scene, globalViewCamera);
                 }
                 stats.end();
             }
